clang/test/BSC/Negative/Ownership/Borrow/borrow_on_borrow/borrow_on_borrow.cbs
// RUN: %clang_cc1 -ast-dump -verify %s
struct R {
   int num;
   int * _Borrow p1;
};

void test() {
  int a = 1;
  int b = 1;
  int *_Borrow p1 = &_Mut a; // legal
  const int *_Borrow p2 = &_Const b; // legal
  int *_Borrow * _Borrow b1 = &_Mut p1; // expected-error {{'&_Mut' on a '_Borrow' qualified type is not allowed}}
  const int *_Borrow const * _Borrow b2 = &_Const p2; // expected-error {{'&_Const' on a '_Borrow' qualified type is not allowed}}
  int *_Borrow const * _Borrow b3 = &_Const p1; /* expected-error {{incompatible borrow types, cannot cast 'const int *_Borrow *_Borrow' to 'int *const _Borrow *_Borrow'}}
                                                expected-error {{'&_Const' on a '_Borrow' qualified type is not allowed}} */
  const int * _Borrow * _Borrow b4 = &_Mut p2; // expected-error {{'&_Mut' on a '_Borrow' qualified type is not allowed}}
  int *_Borrow *_Borrow p3 = &_Mut (&_Mut a);  // expected-error {{'&_Mut' on a '_Borrow' qualified type is not allowed}}  expected-error {{cannot take the address of an rvalue of type 'int *_Borrow'}}
  const int *_Borrow *_Borrow p4 = &_Mut (&_Const b); // expected-error {{'&_Mut' on a '_Borrow' qualified type is not allowed}}  expected-error {{cannot take the address of an rvalue of type 'const int *_Borrow'}}
  const int *_Borrow const * _Borrow p5 = &_Const (&_Const b);  /* expected-error {{cannot take the address of an rvalue of type 'const int *_Borrow'}}
                                                               expected-error {{'&_Const' on a '_Borrow' qualified type is not allowed}} */
  int *_Borrow const * _Borrow p6 = &_Const (&_Mut a); /* expected-error {{cannot take the address of an rvalue of type 'int *_Borrow'}}
                                                      expected-error {{'&_Const' on a '_Borrow' qualified type is not allowed}} */
  int *_Borrow *_Borrow *_Borrow p7 = &_Mut (&_Mut (&_Mut a));  /* expected-error {{cannot take the address of an rvalue of type 'int *_Borrow'}}
                                                             expected-error {{'&_Mut' on a '_Borrow' qualified type is not allowed}} */
  const int *_Borrow *_Borrow *_Borrow p8 = &_Mut (&_Mut (&_Const a));  /* expected-error {{cannot take the address of an rvalue of type 'const int *_Borrow'}}
                                                                     expected-error {{'&_Mut' on a '_Borrow' qualified type is not allowed}}*/
  &_Mut p1; /* expected-error {{'&_Mut' on a '_Borrow' qualified type is not allowed}}
              expected-warning {{expression result unused}} */
  &_Const p1;/* expected-error {{'&_Const' on a '_Borrow' qualified type is not allowed}}
               expected-warning {{expression result unused}} */
  &_Mut p2; /* expected-error {{'&_Mut' on a '_Borrow' qualified type is not allowed}}
              expected-warning {{expression result unused}} */
  &_Const p2; /* expected-error {{'&_Const' on a '_Borrow' qualified type is not allowed}}
                expected-warning {{expression result unused}} */
  &_Mut (&_Mut a);   /* expected-error {{cannot take the address of an rvalue of type 'int *_Borrow'}}
                      expected-error {{'&_Mut' on a '_Borrow' qualified type is not allowed}} */
  &_Const (&_Const b);/* expected-error {{cannot take the address of an rvalue of type 'const int *_Borrow'}}
                       expected-error {{'&_Const' on a '_Borrow' qualified type is not allowed}}*/
  &_Mut (&_Mut a);/* expected-error {{cannot take the address of an rvalue of type 'int *_Borrow'}}
                       expected-error {{'&_Mut' on a '_Borrow' qualified type is not allowed}}*/
  &_Const (&_Const b); /* expected-error {{cannot take the address of an rvalue of type 'const int *_Borrow'}}
                       expected-error {{'&_Const' on a '_Borrow' qualified type is not allowed}}*/
  &p1; // expected-warning {{expression result unused}}
  &p2; // expected-warning {{expression result unused}}
  & (&_Mut a);   // expected-error {{cannot take the address of an rvalue of type 'int *_Borrow'}}
  & (&_Const b); // expected-error {{cannot take the address of an rvalue of type 'const int *_Borrow'}}

  struct R r = { 1, &_Mut a };
  struct R * _Borrow pr = &_Mut r; // expected-error {{'&_Mut' on a '_Borrow' qualified type is not allowed}}
  const struct R * _Borrow pr2 = &_Const r; // expected-error {{'&_Const' on a '_Borrow' qualified type is not allowed}}
  &_Const r.p1; /* expected-error {{'&_Const' on a '_Borrow' qualified type is not allowed}}
                  expected-warning {{expression result unused}} */
  &_Mut r.p1; /* expected-error {{'&_Mut' on a '_Borrow' qualified type is not allowed}}
                expected-warning {{expression result unused}} */
}